@@ -12,6 +12,10 @@ installation-guide (2008xxxx) UNRELEASED; urgency=medium
   * Apply patch from Frank Lichtenheld to improve netboot instructions for
     PowerPC. Closes: #275565.
 
+  [ Joey Hess ]
+  * Comment out partman-auto/disk setting in preseed since lenny d-i will
+    automatically work w/o it if there's just 1 disk. Closes: #490287
+
  -- Frans Pop <fjp@debian.org>  Wed, 02 Jul 2008 17:06:28 +0200
 
 installation-guide (20080520) unstable; urgency=medium
